# home_work_django

./: .env.sample  .gitignore  README.md  category_fixture.json  product_fixture.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  base.html
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: add_data.py  delete_data.py
catalog/migrations/: 0001_initial.py
catalog/templates/: contacts.html  home.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_detail.html
config/: settings.py  urls.py
